<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="textview">TextView</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
    <string name="create_note">Create Note</string>
    <string name="description">Type your description here...</string>
    <string name="type_title">Type your title here...</string>
    <string name="new_note">New note</string>
</resources>
